# lsa_ros2

./: .gitignore  Dockerfile  README.md  README_EN.md  docker_entrypoint.sh  rebuild_in_docker.sh  run_docker_dev.sh  test_ros2_lang_sam.sh
ros2_lang_sam/: package.xml  requirements.txt  setup.cfg  setup.py
ros2_lang_sam/config/: segment_visualization.perspective  segmentation_visualization.rviz
ros2_lang_sam/launch/: segmentation_demo.launch.py  segmentation_rqt_demo.launch.py  segmentation_rviz_demo.launch.py  server.launch.py  test_segmentation.launch.py
ros2_lang_sam/resource/: ros2_lang_sam
ros2_lang_sam/ros2_lang_sam/: image_publisher_node.py  lang_sam.py  lang_sam_client.py  lang_sam_client_node.py  lang_sam_server.py  lang_sam_server_node.py  request_publisher_node.py  result_visualizer_node.py  segmentation_node.py  utils.py
ros2_lang_sam_msgs/: CMakeLists.txt  README.md  README_EN.md  package.xml
ros2_lang_sam_msgs/msg/: SegmentationRequest.msg  SegmentationResult.msg
ros2_lang_sam_msgs/srv/: TextSegmentation.srv
