<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_lang_sam</name>
  <version>0.1.0</version>
  <description>
    ROS 2 wrapper for lang-segment-anything, which combines the power of 
    GroundingDINO detection model and Segment Anything Model 2 (SAM 2.1) for 
    text-prompted object segmentation.
  </description>
  <maintainer email="maintainer@example.com">ROS 2 Developer</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros2_lang_sam_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
