<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_lang_sam_msgs</name>
  <version>0.1.0</version>
  <description>
    Message and service definitions for the ros2_lang_sam package.
    This package provides a ROS 2 wrapper for lang-segment-anything.
  </description>
  <maintainer email="maintainer@example.com">ROS 2 Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
